Added tags feature - Added a plugin to group document tags and create custom tag pages for them - Added a handlebar helper to iterate through the plugin created tag dictionary to make a tag directory in index

--- a/public/index.html
+++ b/public/index.html
@@ -56,16 +56,9 @@
       </div>
       <!-- need loop for tags -->
       <div class="row tags">
-        <a href="tag" class="tag">#Afrofuturism</a>
-        <a class="tag">#Food</a>
-        <a class="tag">#Life</a>
-        <a class="tag">#Design</a>
-        <a class="tag">#Words</a>
-        <a class="tag">#shoes</a>
-        <a class="tag">#books</a>
-        <a class="tag">#games</a>
-        <a class="tag">#exploration</a>
-        <a class="tag">#japanese</a>
+        <a href="\tags{{this}}" class="tag">#interactive</a>
+        <a href="\tags{{this}}" class="tag">#typography</a>
+        <a href="\tags{{this}}" class="tag">#test</a>
       </div>
   </div>
 
