fixed tag links in blog root

--- a/public/index.html
+++ b/public/index.html
@@ -56,9 +56,9 @@
       </div>
       <!-- need loop for tags -->
       <div class="row tags">
-        <a href="\tags{{this}}" class="tag">#interactive</a>
-        <a href="\tags{{this}}" class="tag">#typography</a>
-        <a href="\tags{{this}}" class="tag">#test</a>
+        <a href="tags/interactive" class="tag">#interactive</a>
+        <a href="tags/typography" class="tag">#typography</a>
+        <a href="tags/test" class="tag">#test</a>
       </div>
   </div>
 
