added rss feeds added sitemaps Added some seo tags to templates

--- a/src/palindrome mordnilap/main.html
+++ b/src/palindrome mordnilap/main.html
@@ -3,7 +3,7 @@ title: "Geometric Font + Palindrome"
 date: 2020-05-10
 collection: articles
 blurb: Playing around with palindromes and geometric fonts
-tags: interactive, typography, 
+tags: interactive, typography 
 ---
 
 <script type="text/javascript">
