added humans.txt and robots.txt

--- a/public/geometric-font-+-palindrome/index.html
+++ b/public/geometric-font-+-palindrome/index.html
@@ -6,9 +6,25 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Home</title>
-  <meta name="description" content="This is a description">
+  <title>Geometric Font + Palindrome</title>
+  <meta name="description" content="Playing around with palindromes and geometric fonts">
   <meta name="author" content="This is an author">
+
+  <!-- Other SEO tags
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="og:type" content="website" />
+
+  <meta name="og:title" content="Geometric Font + Palindrome|Carlton Segbefia's Blog" />
+
+  <meta name="og:description" content="Playing around with palindromes and geometric fonts" />
+
+  <meta name="twitter:card" content="summary" />
+
+  <meta name="twitter:title" content="Geometric Font + Palindrome|Carlton Segbefia's Blog" />
+
+  <meta name="twitter:description" content="Playing around with palindromes and geometric fonts" />
+
+  <meta name="next-head-count" content="10" />
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
