--- a/public/hello-world/index.html
+++ b/public/hello-world/index.html
@@ -6,9 +6,25 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Home</title>
-  <meta name="description" content="This is a description">
+  <title>Hello World</title>
+  <meta name="description" content="An introduction to my unamed blog">
   <meta name="author" content="This is an author">
+
+  <!-- Other SEO tags
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="og:type" content="website" />
+
+  <meta name="og:title" content="Hello World|Carlton Segbefia's Blog" />
+
+  <meta name="og:description" content="An introduction to my unamed blog" />
+
+  <meta name="twitter:card" content="summary" />
+
+  <meta name="twitter:title" content="Hello World|Carlton Segbefia's Blog" />
+
+  <meta name="twitter:description" content="An introduction to my unamed blog" />
+
+  <meta name="next-head-count" content="10" />
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
