--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,25 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Home</title>
-  <meta name="description" content="This is a description">
-  <meta name="author" content="This is an author">
+  <title>Home|Carlton Segbefia's Blog</title>
+  <meta name="description" content="A blog by Carlton Segbefia exploring topics like, Technology, Afrofuturism, Design and Fiction">
+  <meta name="author" content="Carlton Segbefia">
+
+  <!-- Other SEO tags
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="og:type" content="website" />
+
+  <meta name="og:title" content="Home|Carlton Segbefia's Blog" />
+
+  <meta name="og:description" content="A blog by Carlton Segbefia exploring topics like, Technology, Afrofuturism, Design and Fiction" />
+
+  <meta name="twitter:card" content="summary" />
+
+  <meta name="twitter:title" content="Home|Carlton Segbefia's Blog" />
+
+  <meta name="twitter:description" content="A blog by Carlton Segbefia exploring topics like, Technology, Afrofuturism, Design and Fiction" />
+
+  <meta name="next-head-count" content="10" />
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -26,6 +42,8 @@
   <!-- <link rel="icon" type="image/png" href="images/favicon.png"> -->
 
   <base href="https://www.blog.carltonsegbefia.com" />
+
+  <link rel="author" href="humans.txt" />
 
 </head>
 
