added watch and serve to make development easier changes to templates - Fixed relative paths - minor changes to wording

--- a/public/hello-world/index.html
+++ b/public/hello-world/index.html
@@ -12,6 +12,8 @@
 
   <!-- Other SEO tags
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="author" href="https://blog.carltonsegbefia.com/humans.txt" />
+
   <meta name="og:type" content="website" />
 
   <meta name="og:title" content="Hello World|Carlton Segbefia's Blog" />
@@ -41,7 +43,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <!-- <link rel="icon" type="image/png" href="images/favicon.png"> -->
 
-  <base href="https://www.blog.carltonsegbefia.com" />
+  <!-- <base href="https://www.blog.carltonsegbefia.com" /> -->
 
 
 </head>
@@ -53,7 +55,7 @@
   <header class="container u-max-full-width ">
     <div class="row navbar">
       <div class="two columns u-pull-left site-name">
-        <a href="http://blog.carltonsegbefia.com" >Home</a>
+        <a href="/" >Home</a>
       </div>
       <div class="five columns u-pull-right menu">
         <a href="https://www.carltonsegbefia.com/" >About</a>
@@ -75,7 +77,16 @@
 <p>We&#39;ll talk about <a href="https://en.wikipedia.org/wiki/Holographic_principle">the holographic principle</a>, dark matter and the beauty of space in infrared light.</p>
 <p>This blog is run by <strong>Carlton</strong> and <strong>God</strong>.</p>
 
+
+    <div class="row tags">
+      <span>Tags:</span>
+      <a href="/tags/test" class="tag">test</a>
+      <a href="/tags/interactive" class="tag">interactive</a>
+    </div>
   </article>
+
+
+
   <!-- Footer
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <footer class="container  u-max-full-width ">
