--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
 
   <!-- Other SEO tags
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="author" href="https://blog.carltonsegbefia.com/humans.txt" />
+
   <meta name="og:type" content="website" />
 
   <meta name="og:title" content="Home|Carlton Segbefia's Blog" />
@@ -41,9 +43,9 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <!-- <link rel="icon" type="image/png" href="images/favicon.png"> -->
 
-  <base href="https://www.blog.carltonsegbefia.com" />
+  <!-- <base href="https://www.blog.carltonsegbefia.com" /> -->
 
-  <link rel="author" href="humans.txt" />
+
 
 </head>
 
@@ -54,7 +56,7 @@
   <header class="container u-max-full-width ">
     <div class="row navbar">
       <div class="two columns u-pull-left site-name">
-        <a href="http://blog.carltonsegbefia.com" >Home</a>
+        <a href="/" >Home</a>
       </div>
       <div class="five columns u-pull-right menu">
         <a href="https://www.carltonsegbefia.com/" >About</a>
