--- a/public/geometric-font-+-palindrome/index.html
+++ b/public/geometric-font-+-palindrome/index.html
@@ -12,6 +12,8 @@
 
   <!-- Other SEO tags
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="author" href="https://blog.carltonsegbefia.com/humans.txt" />
+
   <meta name="og:type" content="website" />
 
   <meta name="og:title" content="Geometric Font + Palindrome|Carlton Segbefia's Blog" />
@@ -41,7 +43,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <!-- <link rel="icon" type="image/png" href="images/favicon.png"> -->
 
-  <base href="https://www.blog.carltonsegbefia.com" />
+  <!-- <base href="https://www.blog.carltonsegbefia.com" /> -->
 
 
 </head>
@@ -53,7 +55,7 @@
   <header class="container u-max-full-width ">
     <div class="row navbar">
       <div class="two columns u-pull-left site-name">
-        <a href="http://blog.carltonsegbefia.com" >Home</a>
+        <a href="/" >Home</a>
       </div>
       <div class="five columns u-pull-right menu">
         <a href="https://www.carltonsegbefia.com/" >About</a>
@@ -142,7 +144,16 @@
     recently. </p>
 </section>
 
+
+    <div class="row tags">
+      <span>Tags:</span>
+      <a href="/tags/interactive" class="tag">interactive</a>
+      <a href="/tags/typography" class="tag">typography</a>
+    </div>
   </article>
+
+
+
   <!-- Footer
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <footer class="container  u-max-full-width ">
