Added gulp to minify files after they are created Renamed article template to post

--- a/public/index.html
+++ b/public/index.html
@@ -1,101 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-  <!-- Basic Page Needs
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta charset="utf-8">
-  <title>Home|Carlton Segbefia's Blog</title>
-  <meta name="description" content="A blog by Carlton Segbefia exploring topics like, Technology, Afrofuturism, Design and Fiction">
-  <meta name="author" content="Carlton Segbefia">
-
-  <!-- Other SEO tags
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="author" href="https://blog.carltonsegbefia.com/humans.txt" />
-
-  <meta name="og:type" content="website" />
-
-  <meta name="og:title" content="Home|Carlton Segbefia's Blog" />
-
-  <meta name="og:description" content="A blog by Carlton Segbefia exploring topics like, Technology, Afrofuturism, Design and Fiction" />
-
-  <meta name="twitter:card" content="summary" />
-
-  <meta name="twitter:title" content="Home|Carlton Segbefia's Blog" />
-
-  <meta name="twitter:description" content="A blog by Carlton Segbefia exploring topics like, Technology, Afrofuturism, Design and Fiction" />
-
-  <meta name="next-head-count" content="10" />
-
-  <!-- Mobile Specific Metas
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- CSS
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/custom.css">
-  <link rel="stylesheet" href="css/skeleton.css">
-
-
-  <!-- Favicon
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <!-- <link rel="icon" type="image/png" href="images/favicon.png"> -->
-
-  <!-- <base href="https://www.blog.carltonsegbefia.com" /> -->
-
-
-
-</head>
-
-<body>
-
-  <!-- Header
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <header class="container u-max-full-width ">
-    <div class="row navbar">
-      <div class="two columns u-pull-left site-name">
-        <a href="/" >Home</a>
-      </div>
-      <div class="five columns u-pull-right menu">
-        <a href="https://www.carltonsegbefia.com/" >About</a>
-        <a href="mailto:blog@carltonsegbefia.com" >Contact</a>
-      </div>
-    </div>
-  </header>
-
-
-  <!-- Tags
-    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div  style="max-width: 650px;margin-bottom: 30%;" class="container">
-    <div class="row title">
-      <h1>An exploration into the mind of Carlton Segbefia</h1>
-      </div>
-      <div class="row tags">
-        <a href="random" class="tag">#Random</a>
-        <a href="all" class="tag">#Recent</a>
-      </div>
-      <!-- need loop for tags -->
-      <div class="row tags">
-        <a href="tags/interactive" class="tag">#interactive</a>
-        <a href="tags/typography" class="tag">#typography</a>
-        <a href="tags/test" class="tag">#test</a>
-      </div>
-  </div>
-
-<!-- Footer
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<footer class="container  u-max-full-width ">
-  <div class="row footer">
-    <p>
-      This is a blog by Carlton Segbefia | Copyright © 2020 All rights reserved
-    </p>
-  </div>
-</footer>
-
-<!-- End Document
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->
-</body>
-
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><title>Home|Carlton Segbefia's Blog</title><meta name="description" content="A blog by Carlton Segbefia exploring topics like, Technology, Afrofuturism, Design and Fiction"><meta name="author" content="Carlton Segbefia"><link rel="author" href="https://blog.carltonsegbefia.com/humans.txt"><meta name="og:type" content="website"><meta name="og:title" content="Home|Carlton Segbefia's Blog"><meta name="og:description" content="A blog by Carlton Segbefia exploring topics like, Technology, Afrofuturism, Design and Fiction"><meta name="twitter:card" content="summary"><meta name="twitter:title" content="Home|Carlton Segbefia's Blog"><meta name="twitter:description" content="A blog by Carlton Segbefia exploring topics like, Technology, Afrofuturism, Design and Fiction"><meta name="next-head-count" content="10"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="stylesheet" href="css/normalize.css"><link rel="stylesheet" href="css/custom.css"><link rel="stylesheet" href="css/skeleton.css"></head><body><header class="container u-max-full-width"><div class="row navbar"><div class="two columns u-pull-left site-name"><a href="/">Home</a></div><div class="five columns u-pull-right menu"><a href="https://www.carltonsegbefia.com/">About</a> <a href="mailto:blog@carltonsegbefia.com">Contact</a></div></div></header><div style="max-width: 650px;margin-bottom: 30%;" class="container"><div class="row title"><h1>An exploration into the mind of Carlton Segbefia</h1></div><div class="row tags"><a href="random" class="tag">#Random</a> <a href="all" class="tag">#Recent</a></div><div class="row tags"><a href="tags/interactive" class="tag">#interactive</a> <a href="tags/typography" class="tag">#typography</a> <a href="tags/test" class="tag">#test</a></div></div><footer class="container u-max-full-width"><div class="row footer"><p>This is a blog by Carlton Segbefia | Copyright © 2020 All rights reserved</p></div></footer></body></html>
