--- a/public/hello-world/index.html
+++ b/public/hello-world/index.html
@@ -1,1 +1,121 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><title>Hello World</title><meta name="description" content="An introduction to my unamed blog"><meta name="author" content="This is an author"><link rel="author" href="https://blog.carltonsegbefia.com/humans.txt"><meta name="og:type" content="website"><meta name="og:title" content="Hello World|Carlton Segbefia's Blog"><meta name="og:description" content="An introduction to my unamed blog"><meta name="twitter:card" content="summary"><meta name="twitter:title" content="Hello World|Carlton Segbefia's Blog"><meta name="twitter:description" content="An introduction to my unamed blog"><meta name="next-head-count" content="10"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="stylesheet" href="../css/normalize.css"><link rel="stylesheet" href="../css/custom.css"><link rel="stylesheet" href="../css/skeleton.css"></head><body><header class="container u-max-full-width"><div class="row navbar"><div class="two columns u-pull-left site-name"><a href="/">Home</a></div><div class="five columns u-pull-right menu"><a href="https://www.carltonsegbefia.com/">About</a> <a href="mailto:blog@carltonsegbefia.com">Contact</a></div></div></header><article class="container"><div class="row"><h2 class="row heading">Hello World</h2><h5 class="row sub-heading">11th October 2016 | Approximately a 1 min read</h5></div><h2 id="welcome-to-my-unamed-blog">Welcome to my Unamed Blog</h2><p><em>This Unamed Blog</em> is a new blog about space, distant galaxies and black holes.</p><p>We&#39;ll talk about <a href="https://en.wikipedia.org/wiki/Holographic_principle">the holographic principle</a>, dark matter and the beauty of space in infrared light.</p><p>This blog is run by <strong>Carlton</strong> and <strong>God</strong>.</p><div class="row tags"><span>Tags:</span> <a href="/tags/test" class="tag">test</a> <a href="/tags/interactive" class="tag">interactive</a></div></article><footer class="container u-max-full-width"><div class="row footer"><p>This is a blog by Carlton Segbefia | Copyright © 2020 All rights reserved</p></div></footer></body></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+  <!-- Basic Page Needs
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta charset="utf-8">
+  <title>Hello World</title>
+  <meta name="description" content="An introduction to my unamed blog">
+  <meta name="author" content="Carlton Segbefia">
+
+  <!-- Other SEO tags
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="author" href="https://blog.carltonsegbefia.com/humans.txt" />
+
+  <meta name="og:type" content="website" />
+
+  <meta name="og:title" content="Hello World|Carlton Segbefia's Blog" />
+
+  <meta name="og:description" content="An introduction to my unamed blog" />
+
+  <meta name="twitter:card" content="summary" />
+
+  <meta name="twitter:title" content="Hello World|Carlton Segbefia's Blog" />
+
+  <meta name="twitter:description" content="An introduction to my unamed blog" />
+
+  <meta name="next-head-count" content="10" />
+
+  <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- CSS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="../css/normalize.css">
+  <link rel="stylesheet" href="../css/custom.css">
+  <link rel="stylesheet" href="../css/skeleton.css">
+
+
+  <!-- Favicon
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <!-- <link rel="icon" type="image/png" href="images/favicon.png"> -->
+
+  <!-- <base href="https://www.blog.carltonsegbefia.com" /> -->
+
+
+</head>
+
+<body>
+
+  <!-- Header
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <header class="container u-max-full-width ">
+    <div class="row navbar">
+      <div class="two columns u-pull-left site-name">
+        <a href="/" >Home</a>
+      </div>
+      <div class="five columns u-pull-right menu">
+        <a href="https://www.carltonsegbefia.com/" >About</a>
+        <a href="mailto:blog@carltonsegbefia.com" >Contact</a>
+      </div>
+    </div>
+  </header>
+
+  <!-- Body
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <article class="container">
+    <div class="row">
+      <h2 class="row heading">
+        Hello World
+      </h2>
+      <h5 class="row sub-heading">
+        11th October 2016 |  Approximately a 1 min read
+      </h5>
+    </div>
+    <h2 id="welcome-to-my-unamed-blog">Welcome to my Unamed Blog</h2>
+<p><em>This Unamed Blog</em> is a new blog about space, distant galaxies and black holes.</p>
+<p>We&#39;ll talk about <a href="https://en.wikipedia.org/wiki/Holographic_principle">the holographic principle</a>, dark matter and the beauty of space in infrared light.</p>
+<p>This blog is run by <strong>Carlton</strong> and <strong>God</strong>.</p>
+
+
+    <div class="row tags">
+      <span>Tags:</span>
+        <a href="/tags/test" class="tag">test</a>
+        <a href="/tags/interactive" class="tag">interactive</a>
+    </div>
+  </article>
+
+  <!-- Next and Previous Links
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <div class="container">
+    <div class="row">
+      <div class="four columns">
+          <a href="/geometric-font-+-palindrome">Previous: Geometric Font + Palindrome</a>
+      </div>
+
+      <div class="four columns">
+          <a href="/hello-world">Next: Hello World</a>
+      </div>
+
+    </div>
+  </div>
+
+
+  <!-- Footer
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <footer class="container  u-max-full-width ">
+    <div class="row footer">
+      <p>
+        This is a blog by Carlton Segbefia | Copyright © 2020 All rights reserved
+      </p>
+    </div>
+  </footer>
+
+  <!-- End Document
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+</body>
+
+</html>
