--- a/src/palindrome mordnilap/main.html
+++ b/src/palindrome mordnilap/main.html
@@ -1,9 +1,9 @@
 ---
 title: "Geometric Font + Palindrome"
 date: 2020-05-10
-collection: articles
+collection: posts
 blurb: Playing around with palindromes and geometric fonts
-tags: interactive, typography 
+tags: interactive, typography
 ---
 
 <script type="text/javascript">
