set-up pages for all posts with collections and pagnation

--- a/public/geometric-font-+-palindrome/index.html
+++ b/public/geometric-font-+-palindrome/index.html
@@ -163,7 +163,7 @@
       </div>
 
       <div class="four columns">
-          <a href="/geometric-font-+-palindrome">Next: Geometric Font + Palindrome</a>
+          <a href="/hello-world">Next: Hello World</a>
       </div>
 
     </div>
