add prettier next and previous links to templates

--- a/public/geometric-font-+-palindrome/index.html
+++ b/public/geometric-font-+-palindrome/index.html
@@ -162,8 +162,8 @@
       <div class="four columns">
       </div>
 
-      <div class="four columns">
-          <a href="/hello-world">Next: Hello World</a>
+      <div class="four columns  offset-by-eight ">
+          <a class="next"  href="/geometric-font-+-palindrome">Next: Geometric Font + Palindrome</a>
       </div>
 
     </div>
