--- a/public/hello-world/index.html
+++ b/public/hello-world/index.html
@@ -93,10 +93,11 @@
   <div class="container">
     <div class="row">
       <div class="four columns">
-          <a href="/geometric-font-+-palindrome">Previous: Geometric Font + Palindrome</a>
+          <a class="previous"  href="/geometric-font-+-palindrome">Previous: Geometric Font + Palindrome</a>
       </div>
 
-      <div class="four columns">
+      <div class="four columns ">
+          <a class="next"  href="/hello-world">Next: Hello World</a>
       </div>
 
     </div>
