--- a/public/random/index.html
+++ b/public/random/index.html
@@ -1,35 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-  <!-- Basic Page Needs
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta charset="utf-8">
-  <title>Random Post|Carlton Segbefia's Blog</title>
-  <meta name="description" content="This page redirects you to a random post on my blog ">
-  <meta name="author" content="Carlton Segbefia">
-
-  <!-- Other SEO tags
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="author" href="https://blog.carltonsegbefia.com/humans.txt" />
-
-  <!-- Mobile Specific Metas
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-</head>
-
-<script type="text/javascript">
-// the used links
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><title>Random Post|Carlton Segbefia's Blog</title><meta name="description" content="This page redirects you to a random post on my blog "><meta name="author" content="Carlton Segbefia"><link rel="author" href="https://blog.carltonsegbefia.com/humans.txt"><meta name="viewport" content="width=device-width,initial-scale=1"></head><script type="text/javascript">// the used links
 var links = [ 
 "geometric-font-+-palindrome",
-
-"geometric-font-+-palindrome",
-
-"hello-world",
-
-"hello-world",
  ];
 
 function goToRandom() {
@@ -41,12 +12,4 @@ function goToRandom() {
     var link = '/' + links[randIdx];
     // open it in a new window / tab (depends on browser setting)
     window.location.replace(link) ;
-};
-</script>
-
-<body onLoad="goToRandom()">
-  <!-- End Document
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->
-</body>
-
-</html>
+};</script><body onload="goToRandom()"></body></html>
